kubernetes/prometheus.yaml
apiVersion: v1
kind: Pod
metadata:
  name: prometheus-lite
spec:
  restartPolicy: Always
  containers:
    - name: prometheus
      image: prom/prometheus
      ports:
        - containerPort: 9090
